--- a/notebooks/homepage.ipynb
+++ b/notebooks/homepage.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
+    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link"
    ]
   },
@@ -39,10 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('../jsons/general.json')\n",
+    "f = open('jsons/general.json')\n",
     "general = json.load(f)\n",
     "\n",
-    "e = open('../jsons/homepage.json')\n",
+    "e = open('jsons/homepage.json')\n",
     "Homepage = json.load(e)"
    ]
   },
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../Home.html\", mode=\"w\", encoding=\"utf-8\") as Homepage:\n",
+    "with open(\"Home.html\", mode=\"w\", encoding=\"utf-8\") as Homepage:\n",
     "        Homepage.write(content)"
    ]
   },
