--- a/notebooks/individual_person_pages.ipynb
+++ b/notebooks/individual_person_pages.ipynb
@@ -29,19 +29,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('../jsons/general.json')\n",
+    "f = open('jsons/general.json')\n",
     "general = json.load(f)\n",
     "\n",
-    "e = open('../jsons/pi.json')\n",
+    "e = open('jsons/pi.json')\n",
     "prin = json.load(e)\n",
     "\n",
-    "g = open('../jsons/post_docs.json')\n",
+    "g = open('jsons/post_docs.json')\n",
     "post_docs = json.load(g)\n",
     "\n",
-    "h = open('../jsons/grad_students.json')\n",
+    "h = open('jsons/grad_students.json')\n",
     "grad_students = json.load(h)\n",
     "\n",
-    "i = open('../jsons/undergrads.json')\n",
+    "i = open('jsons/undergrads.json')\n",
     "undergrads = json.load(i)"
    ]
   },
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
+    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link\n",
     "template = environment.get_template(\"individual_person.html.j2\")"
    ]
@@ -64,7 +64,7 @@
    "source": [
     "for role in [prin, post_docs, grad_students, undergrads]:\n",
     "    for person in role:\n",
-    "        filename = f\"../{ page_link(person['name']) }.html\"\n",
+    "        filename = f\"{ page_link(person['name']) }.html\"\n",
     "        content = template.render(\n",
     "            general=general,\n",
     "            person=person\n",
