--- a/notebooks/individual_research_pages.ipynb
+++ b/notebooks/individual_research_pages.ipynb
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('../jsons/general.json')\n",
+    "f = open('jsons/general.json')\n",
     "general = json.load(f)\n",
     "\n",
-    "e = open('../jsons/research.json')\n",
+    "e = open('jsons/research.json')\n",
     "research = json.load(e)"
    ]
   },
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
+    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link\n",
     "template_no_twitter = environment.get_template(\"research_page_no_twitter.html.j2\")\n",
     "template_twitter = environment.get_template(\"research_page_twitter.html.j2\")"
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "for project in research:\n",
-    "    filename = f\"../{ page_link(project['name']) }.html\"\n",
+    "    filename = f\"{ page_link(project['name']) }.html\"\n",
     "    if project[\"twitter\"] == \"None\":\n",
     "        content = template_no_twitter.render(\n",
     "            general=general,\n",
