--- a/notebooks/people.ipynb
+++ b/notebooks/people.ipynb
@@ -16,19 +16,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('../jsons/general.json')\n",
+    "f = open('jsons/general.json')\n",
     "general = json.load(f)\n",
     "\n",
-    "e = open('../jsons/pi.json')\n",
+    "e = open('jsons/pi.json')\n",
     "prin = json.load(e)\n",
     "\n",
-    "g = open('../jsons/post_docs.json')\n",
+    "g = open('jsons/post_docs.json')\n",
     "post_docs = json.load(g)\n",
     "\n",
-    "h = open('../jsons/grad_students.json')\n",
+    "h = open('jsons/grad_students.json')\n",
     "grad_students = json.load(h)\n",
     "\n",
-    "i = open('../jsons/undergrads.json')\n",
+    "i = open('jsons/undergrads.json')\n",
     "undergrads = json.load(i)\n"
    ]
   },
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
+    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link"
    ]
   },
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../People.html\", mode=\"w\", encoding=\"utf-8\") as people:\n",
+    "with open(\"People.html\", mode=\"w\", encoding=\"utf-8\") as people:\n",
     "        people.write(content)"
    ]
   },
