--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('../jsons/general.json')\n",
+    "f = open('jsons/general.json')\n",
     "general = json.load(f)\n",
     "\n",
-    "e = open('../jsons/research.json')\n",
+    "e = open('jsons/research.json')\n",
     "research = json.load(e)"
    ]
   },
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
+    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link"
    ]
   },
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../Research.html\", mode=\"w\", encoding=\"utf-8\") as research:\n",
+    "with open(\"Research.html\", mode=\"w\", encoding=\"utf-8\") as research:\n",
     "        research.write(content)"
    ]
   },
