--- a/notebooks/homepage.ipynb
+++ b/notebooks/homepage.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"Home.html\", mode=\"w\", encoding=\"utf-8\") as Homepage:\n",
+    "with open(\"index.html\", mode=\"w\", encoding=\"utf-8\") as Homepage:\n",
     "        Homepage.write(content)"
    ]
   },
