--- a/notebooks/people.ipynb
+++ b/notebooks/people.ipynb
@@ -12,29 +12,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('jsons/general.json')\n",
+    "f = open('../jsons/general.json')\n",
     "general = json.load(f)\n",
     "\n",
-    "e = open('jsons/pi.json')\n",
+    "e = open('../jsons/pi.json')\n",
     "prin = json.load(e)\n",
     "\n",
-    "g = open('jsons/post_docs.json')\n",
+    "g = open('../jsons/post_docs.json')\n",
     "post_docs = json.load(g)\n",
     "\n",
-    "h = open('jsons/grad_students.json')\n",
+    "h = open('../jsons/grad_students.json')\n",
     "grad_students = json.load(h)\n",
     "\n",
-    "i = open('jsons/undergrads.json')\n",
+    "i = open('../jsons/undergrads.json')\n",
     "undergrads = json.load(i)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cmse_202_conda",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.7"
   },
   "vscode": {
    "interpreter": {
