updated website code

--- a/notebooks/people.ipynb
+++ b/notebooks/people.ipynb
@@ -12,29 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open('jsons/general.json')\n",
-    "general = json.load(f)\n",
-    "\n",
-    "e = open('jsons/pi.json')\n",
-    "prin = json.load(e)\n",
-    "\n",
-    "g = open('jsons/post_docs.json')\n",
-    "post_docs = json.load(g)\n",
-    "\n",
-    "h = open('jsons/grad_students.json')\n",
-    "grad_students = json.load(h)\n",
-    "\n",
-    "i = open('jsons/undergrads.json')\n",
-    "undergrads = json.load(i)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
+    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
     "environment.globals['page_link'] = page_link"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,55 +44,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "content = template.render(\n",
-    "    general=general,\n",
-    "    prin=prin,\n",
-    "    post_docs=post_docs,\n",
-    "    grad_students=grad_students,\n",
-    "    undergrads=undergrads\n",
-    "    )"
+    "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\", \"alumni\"]\n",
+    "data = {}\n",
+    "for json_file in json_files:\n",
+    "    with open(f\"../jsons/{json_file}.json\") as json_var:\n",
+    "        data[json_file] = json.load(json_var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"People.html\", mode=\"w\", encoding=\"utf-8\") as people:\n",
+    "content = template.render(general=data[\"general\"], instructor=data[\"instructor\"], post_docs=data[\"post_docs\"], grad_students=data[\"grad_students\"], undergrads=data[\"undergrads\"], alumni=data[\"alumni\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../People.html\", mode=\"w\", encoding=\"utf-8\") as people:\n",
     "        people.write(content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.close()\n",
-    "e.close()\n",
-    "g.close()\n",
-    "h.close()\n",
-    "i.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -133,11 +91,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "76114b7378daabac0adaf45999136d506a4fe02ddaec5af89d55add2ce71883e"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
