--- a/notebooks/individual_person_pages.ipynb
+++ b/notebooks/individual_person_pages.ipynb
@@ -29,20 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('jsons/general.json')\n",
-    "general = json.load(f)\n",
-    "\n",
-    "e = open('jsons/pi.json')\n",
-    "prin = json.load(e)\n",
-    "\n",
-    "g = open('jsons/post_docs.json')\n",
-    "post_docs = json.load(g)\n",
-    "\n",
-    "h = open('jsons/grad_students.json')\n",
-    "grad_students = json.load(h)\n",
-    "\n",
-    "i = open('jsons/undergrads.json')\n",
-    "undergrads = json.load(i)"
+    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
+    "environment.globals['page_link'] = page_link\n",
+    "template = environment.get_template(\"individual_person.html.j2\")"
    ]
   },
   {
@@ -51,9 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
-    "environment.globals['page_link'] = page_link\n",
-    "template = environment.get_template(\"individual_person.html.j2\")"
+    "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\", \"alumni\"]\n",
+    "data = {}\n",
+    "for json_file in json_files:\n",
+    "    with open(f\"../jsons/{json_file}.json\") as json_var:\n",
+    "        data[json_file] = json.load(json_var)"
    ]
   },
   {
@@ -62,15 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for role in [prin, post_docs, grad_students, undergrads]:\n",
-    "    for person in role:\n",
-    "        filename = f\"{ page_link(person['name']) }.html\"\n",
-    "        content = template.render(\n",
-    "            general=general,\n",
-    "            person=person\n",
-    "        )\n",
+    "for role in [data[\"instructor\"], data[\"post_docs\"], data[\"grad_students\"], data[\"undergrads\"], data[\"alumni\"]]:\n",
+    "    for person in role[1:]:\n",
+    "        filename = f\"../people/{ page_link(person['name'])}.html\"\n",
+    "        content = template.render(general=data['general'], person=person)\n",
     "        with open(filename, mode=\"w\", encoding=\"utf-8\") as page:\n",
-    "            page.write(content)\n"
+    "            page.write(content)"
    ]
   },
   {
@@ -79,17 +67,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.close()\n",
-    "e.close()\n",
-    "g.close()\n",
-    "h.close()\n",
-    "i.close()"
+    "with open(filename, mode=\"w\", encoding=\"utf-8\") as page:\n",
+    "    page.write(content)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('cmse_202_conda')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -103,11 +88,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "76114b7378daabac0adaf45999136d506a4fe02ddaec5af89d55add2ce71883e"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
