--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,30 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('jsons/general.json')\n",
-    "general = json.load(f)\n",
-    "\n",
-    "e = open('jsons/research.json')\n",
-    "research = json.load(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
+    "environment = Environment(loader=FileSystemLoader(\"../templates/\"))\n",
     "environment.globals['page_link'] = page_link"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,47 +44,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "content = template.render(\n",
-    "        general=general,\n",
-    "        research=research\n",
-    "    )"
+    "json_files = [\"general\", \"research\"]\n",
+    "data = {}\n",
+    "for json_file in json_files:\n",
+    "    with open(f\"../jsons/{json_file}.json\") as json_var:\n",
+    "        data[json_file] = json.load(json_var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"Research.html\", mode=\"w\", encoding=\"utf-8\") as research:\n",
+    "content = template.render(general=data[\"general\"], research=data[\"research\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../Research.html\", mode=\"w\", encoding=\"utf-8\") as research:\n",
     "        research.write(content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.close()\n",
-    "e.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('cmse_202_conda')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -111,11 +91,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "76114b7378daabac0adaf45999136d506a4fe02ddaec5af89d55add2ce71883e"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
