--- a/notebooks/contact.ipynb
+++ b/notebooks/contact.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,21 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# template gets the template from the environment.Content renders the template with the data from the general and homepage variables.\n",
-    "template = environment.get_template('homepage.html.j2')\n"
+    "template = environment.get_template('contact.html.j2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_files = [\"general\", \"homepage\"]\n",
+    "json_files = [\"general\", \"contact\"]\n",
     "data = {}\n",
     "for json_file in json_files:\n",
     "    with open(f\"jsons/{json_file}.json\") as json_var:\n",
@@ -60,22 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "content = template.render(general=data[\"general\"], Homepage=data[\"homepage\"])"
+    "content = template.render(general=data[\"general\"], contact=data[\"contact\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "#open in write mode\n",
-    "with open('index.html', mode='w', encoding='utf-8') as Homepage:\n",
-    "    Homepage.write(content)\n"
+    "with open('Contact.html', mode='w', encoding='utf-8') as contact:\n",
+    "    contact.write(content)\n"
    ]
   }
  ],
@@ -95,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2 (default, Apr  8 2021, 23:19:18) \n[Clang 12.0.5 (clang-1205.0.22.9)]"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
