--- a/notebooks/individual_research_pages.ipynb
+++ b/notebooks/individual_research_pages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,6 @@
     "        return a.replace(\" \", \"_\")\n",
     "    else: \n",
     "        return a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open('jsons/general.json')\n",
-    "general = json.load(f)\n",
-    "\n",
-    "e = open('jsons/research.json')\n",
-    "research = json.load(e)"
    ]
   },
   {
@@ -54,23 +41,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for project in research:\n",
-    "    filename = f\"{ page_link(project['name']) }.html\"\n",
-    "    if project[\"twitter\"] == \"None\":\n",
-    "        content = template_no_twitter.render(\n",
-    "            general=general,\n",
-    "            research=project\n",
-    "        )\n",
-    "        with open(filename, mode=\"w\", encoding=\"utf-8\") as message:\n",
-    "            message.write(content)\n",
-    "    else:\n",
-    "        content = template_twitter.render(\n",
-    "            general=general,\n",
-    "            research=project\n",
-    "        )\n",
-    "        with open(filename, mode=\"w\", encoding=\"utf-8\") as message:\n",
-    "            message.write(content)\n",
-    "\n"
+    "json_files = [\"general\", \"research\"]\n",
+    "data = {}\n",
+    "for json_file in json_files:\n",
+    "    with open(f\"jsons/{json_file}.json\") as json_var:\n",
+    "        data[json_file] = json.load(json_var)"
    ]
   },
   {
@@ -79,21 +54,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.close()\n",
-    "e.close()\n"
+    "for i,project in enumerate(data[\"research\"]):\n",
+    "    filename = f\"sub_research/{ page_link(data['general']['Research'][i]) }.html\"\n",
+    "    if project[\"twitter\"] == \"None\":\n",
+    "        content = template_no_twitter.render(\n",
+    "            general=data[\"general\"],\n",
+    "            research=project\n",
+    "        )\n",
+    "    else:\n",
+    "        content = template_twitter.render(\n",
+    "            general=data[\"general\"],\n",
+    "            research=project\n",
+    "        )\n",
+    "    with open(filename, mode=\"w\", encoding=\"utf-8\") as message:\n",
+    "        message.write(content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cmse_202_conda",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -107,11 +87,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.2 (default, Apr  8 2021, 23:19:18) \n[Clang 12.0.5 (clang-1205.0.22.9)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "76114b7378daabac0adaf45999136d506a4fe02ddaec5af89d55add2ce71883e"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
