--- a/notebooks/contact.ipynb
+++ b/notebooks/contact.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Set environment variables\n",
-    "token = os.environ['LAL']\n",
+    "token = os.environ['ACCESS_DATA']\n",
     "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/groupwebsite_jsons/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
