--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -19,7 +19,7 @@
     "        return a\n",
     "\n",
     "# Set environment variables\n",
-    "token = os.environ['LAL']\n",
+    "token = os.environ['ACCESS_DATA']\n",
     "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/groupwebsite_jsons/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
