--- a/notebooks/contact.ipynb
+++ b/notebooks/contact.ipynb
@@ -90,9 +90,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#open in write mode\n",
-    "with open('Contact.html', mode='w', encoding='utf-8') as contact:\n",
-    "    contact.write(content)\n"
+    "# Retrieve the first item from the navigation bar\n",
+    "filename = data[\"general\"][\"navigation_bar\"][3]+ '.html'\n",
+    "\n",
+    "# Open the file in write mode\n",
+    "with open(filename, mode='w', encoding='utf-8') as Homepage:\n",
+    "    Homepage.write(content)"
    ]
   }
  ],
