--- a/notebooks/people.ipynb
+++ b/notebooks/people.ipynb
@@ -10,20 +10,44 @@
     "import requests\n",
     "import base64\n",
     "import json\n",
-    "from jinja2 import Environment, FileSystemLoader\n",
+    "from jinja2 import Environment, FileSystemLoader\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def page_link(a):\n",
     "    if ' ' in a:\n",
     "        return a.replace(\" \", \"_\")\n",
     "    else: \n",
-    "        return a\n",
+    "        return a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Set environment variables\n",
     "token = os.environ['ACCESS_DATA']\n",
     "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/groupwebsite_jsons/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Fetch and decode JSON files\n",
     "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\", \"alumni\"]\n",
@@ -32,17 +56,35 @@
     "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
     "    content = response.json()[\"content\"]\n",
     "    decoded = base64.b64decode(content).decode()\n",
-    "    data[json_file] = json.loads(decoded)\n",
+    "    data[json_file] = json.loads(decoded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Create instance of Environment and render template\n",
     "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link\n",
     "template = environment.get_template(\"people.html.j2\")\n",
-    "content = template.render(general=data[\"general\"], instructor=data[\"instructor\"], post_docs=data[\"post_docs\"], grad_students=data[\"grad_students\"], undergrads=data[\"undergrads\"], alumni=data[\"alumni\"])\n",
+    "content = template.render(general=data[\"general\"], instructor=data[\"instructor\"], post_docs=data[\"post_docs\"], grad_students=data[\"grad_students\"], undergrads=data[\"undergrads\"], alumni=data[\"alumni\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve the first item from the navigation bar\n",
+    "filename = data[\"general\"][\"navigation_bar\"][1]+ '.html'\n",
     "\n",
-    "# Write rendered content to file\n",
-    "with open(\"People.html\", mode=\"w\", encoding=\"utf-8\") as people:\n",
-    "        people.write(content)\n"
+    "# Open the file in write mode\n",
+    "with open(filename, mode='w', encoding='utf-8') as Homepage:\n",
+    "    Homepage.write(content)"
    ]
   }
  ],
