--- a/notebooks/individual_person_pages.ipynb
+++ b/notebooks/individual_person_pages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,20 +10,44 @@
     "import requests\n",
     "import base64\n",
     "import json\n",
-    "from jinja2 import Environment, FileSystemLoader\n",
+    "from jinja2 import Environment, FileSystemLoader\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def page_link(a):\n",
     "    if ' ' in a:\n",
     "        return a.replace(' ', '_')\n",
     "    else:\n",
-    "        return a\n",
+    "        return a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Set environment variables\n",
     "token = os.environ['ACCESS_DATA']\n",
     "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/groupwebsite_jsons/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Fetch and decode JSON files\n",
     "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\", \"alumni\"]\n",
@@ -32,12 +56,28 @@
     "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
     "    content = response.json()[\"content\"]\n",
     "    decoded = base64.b64decode(content).decode()\n",
-    "    data[json_file] = json.loads(decoded)\n",
+    "    data[json_file] = json.loads(decoded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Create instance of Environment and render template\n",
     "environment = Environment(loader=FileSystemLoader('templates/'))\n",
     "environment.globals['page_link'] = page_link\n",
-    "template = environment.get_template('individual_person.html.j2')\n",
+    "template = environment.get_template('individual_person.html.j2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for role in [data[\"instructor\"], data[\"post_docs\"], data[\"grad_students\"], data[\"undergrads\"], data[\"alumni\"]]:\n",
     "    for person in role[1:]:\n",
     "        filename = f\"people/{ page_link(person['name'])}.html\"\n",
