--- a/notebooks/individual_research_pages.ipynb
+++ b/notebooks/individual_research_pages.ipynb
@@ -10,20 +10,44 @@
     "import requests\n",
     "import base64\n",
     "import json\n",
-    "from jinja2 import Environment, FileSystemLoader\n",
+    "from jinja2 import Environment, FileSystemLoader\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def page_link(a):\n",
     "    if ' ' in a:\n",
     "        return a.replace(\" \", \"_\")\n",
     "    else: \n",
-    "        return a\n",
+    "        return a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Set environment variables\n",
     "token = os.environ['ACCESS_DATA']\n",
     "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/groupwebsite_jsons/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Fetch and decode JSON files\n",
     "json_files = [\"general\", \"research\"]\n",
@@ -32,13 +56,29 @@
     "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
     "    content = response.json()[\"content\"]\n",
     "    decoded = base64.b64decode(content).decode()\n",
-    "    data[json_file] = json.loads(decoded)\n",
+    "    data[json_file] = json.loads(decoded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Create instance of Environment and render templates\n",
     "environment = Environment(loader=FileSystemLoader('templates/'))\n",
     "environment.globals['page_link'] = page_link\n",
     "template_no_twitter = environment.get_template('research_page_no_twitter.html.j2')\n",
-    "template_twitter = environment.get_template('research_page_twitter.html.j2')\n",
+    "template_twitter = environment.get_template('research_page_twitter.html.j2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Render content and write to file\n",
     "for i,project in enumerate(data[\"research\"]):\n",
