modifying as per directory structure

--- a/notebooks/people.ipynb
+++ b/notebooks/people.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "# Set environment variables\n",
     "token = os.environ['ACCESS_DATA']\n",
-    "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/groupwebsite_jsons/\"\n",
+    "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/people/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
     "}\n"
@@ -50,7 +50,7 @@
    "source": [
     "\n",
     "# Fetch and decode JSON files\n",
-    "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\", \"alumni\"]\n",
+    "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\"]\n",
     "data = {}\n",
     "for json_file in json_files:\n",
     "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
@@ -70,7 +70,7 @@
     "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link\n",
     "template = environment.get_template(\"people.html.j2\")\n",
-    "content = template.render(general=data[\"general\"], instructor=data[\"instructor\"], post_docs=data[\"post_docs\"], grad_students=data[\"grad_students\"], undergrads=data[\"undergrads\"], alumni=data[\"alumni\"])\n"
+    "content = template.render(general=data[\"general\"], instructor=data[\"instructor\"], post_docs=data[\"post_docs\"], grad_students=data[\"grad_students\"], undergrads=data[\"undergrads\"])\n"
    ]
   },
   {
@@ -95,7 +95,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
   "orig_nbformat": 4,
