--- a/notebooks/individual_person_pages.ipynb
+++ b/notebooks/individual_person_pages.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "# Set environment variables\n",
     "token = os.environ['ACCESS_DATA']\n",
-    "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/people/\"\n",
+    "url_base = \"https://api.github.com/repos/kerzendorf-group/group-data/contents/jsons/\"\n",
     "headers = {\n",
     "    \"Authorization\": \"Token \" + token\n",
     "}\n"
@@ -50,10 +50,27 @@
    "source": [
     "\n",
     "# Fetch and decode JSON files\n",
-    "json_files = [\"general\", \"instructor\", \"post_docs\", \"grad_students\", \"undergrads\"]\n",
+    "json_files = [\"instructor\", \"post_docs\", \"grad_students\", \"undergrads\"]\n",
     "data = {}\n",
     "for json_file in json_files:\n",
     "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
+    "    content = response.json()[\"content\"]\n",
+    "    decoded = base64.b64decode(content).decode()\n",
+    "    data[json_file] = json.loads(decoded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Fetch and decode People JSON files\n",
+    "json_files = [\"post_docs\", \"grad_students\", \"undergrads\"]\n",
+    "data = {}\n",
+    "for json_file in json_files:\n",
+    "    response = requests.get(url_base + \"people/\" + json_file + \".json\", headers=headers)\n",
     "    content = response.json()[\"content\"]\n",
     "    decoded = base64.b64decode(content).decode()\n",
     "    data[json_file] = json.loads(decoded)\n"
