--- a/notebooks/individual_person_pages.ipynb
+++ b/notebooks/individual_person_pages.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "\n",
     "# Fetch and decode JSON files\n",
-    "json_files = [\"instructor\", \"post_docs\", \"grad_students\", \"undergrads\"]\n",
+    "json_files = [\"general\"]\n",
     "data = {}\n",
     "for json_file in json_files:\n",
     "    response = requests.get(url_base + json_file + \".json\", headers=headers)\n",
