--- a/notebooks/people copy.ipynb
+++ b/notebooks/people copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,21 +71,13 @@
     "# Create instance of Environment and render template\n",
     "environment = Environment(loader=FileSystemLoader(\"templates/\"))\n",
     "environment.globals['page_link'] = page_link\n",
-    "template = environment.get_template(\"people.html.j2\")"
+    "template = environment.get_template(\"people.html.j2\")\n",
+    "content = template.render(general=data[\"general\"], instructor=data[\"instructor\"], post_docs=data[\"post_docs\"], grad_students=data[\"grad_students\"], undergrads=data[\"undergrads\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "content = template.render(general=data[\"general\"], instructor=data[\"instructor\"], post_docs=data[\"post_docs\"], grad_students=data[\"grad_students\"], undergrads=data[\"undergrads\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
